--- a/tables/FeedbackOptimizer.tex
+++ b/tables/FeedbackOptimizer.tex
@@ -1,5 +1,5 @@
 %! Author = Daniel Schwab
-%! Date = 2025-10-13
+%! Date = 2025-10-14
 \providecommand{\CMOneNASA}{CMOneNASA}
 \providecommand{\Dronology}{Dronology}
 \providecommand{\GANNT}{GANNT}
@@ -8,55 +8,55 @@
 \providecommand{\Avg}{Avg}
 \providecommand{\WeightedAvg}{WeightedAvg}
 
-\begin{tabularx}{\hsize}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z }
+\begin{tabularx}{\hsize}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 2 }{c}{KISS-Original}  & \multicolumn{ 2 }{c}{feedback (\iter=1, \feed=3)}  & \multicolumn{ 2 }{c}{feedback (\iter=5, \feed=3)}  & \multicolumn{ 2 }{c}{feedback (\iter=10, \feed=5)}                                                                                          \\
-    \cmidrule(lr){ 3-4 }
-    \cmidrule(lr){ 5-6 }
-    \cmidrule(lr){ 7-8 }
-    \cmidrule(lr){ 9-10 }
-    &                            & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini           \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{feedback (\iter=1, \feed=3)}  & \multicolumn{ 3 }{c}{feedback (\iter=5, \feed=3)}  & \multicolumn{ 3 }{c}{feedback (\iter=10, \feed=5)}                                                                                          \\
+    \cmidrule(lr){ 3-5 }
+    \cmidrule(lr){ 6-8 }
+    \cmidrule(lr){ 9-11 }
+    \cmidrule(lr){ 12-14 }
+    &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
     \midrule
     \multirow{ 3 }{*}{\rotatebox{90}{\CMOneNASA}}
-    & P.    & 0.349    & 0.341    & 0.408    & 0.382    & 0.394    & 0.364    & 0.349    & \textbf{ 0.5 } \\
-    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.578    & 0.578    & 0.267    & \textbf{ 0.644 }    & 0.244 \\
-    & F\textsubscript{1}    & 0.453    & 0.446    & \textbf{ 0.5 }    & 0.46    & 0.468    & 0.308    & 0.453    & 0.328 \\
+    & P.    & 0.349    & 0.341    & 0.33    & 0.408    & 0.382    & 0.33    & 0.394    & 0.364    & 0.33    & 0.349    & \textbf{ 0.5 }    & 0.333 \\
+    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.578    & \textbf{ 0.644 }    & 0.578    & 0.267    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.244    & \textbf{ 0.644 } \\
+    & F\textsubscript{1}    & 0.453    & 0.446    & 0.436    & \textbf{ 0.5 }    & 0.46    & 0.436    & 0.468    & 0.308    & 0.436    & 0.453    & 0.328    & 0.439 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\Dronology}}
-    & P.    & 0.394    & 0.386    & \textbf{ 0.549 }    & 0.386    & 0.45    & 0.387    & 0.405    & 0.413 \\
-    & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.668    & \textbf{ 0.695 }    & 0.691    & 0.691    & 0.691    & 0.659 \\
-    & F\textsubscript{1}    & 0.503    & 0.497    & \textbf{ 0.602 }    & 0.497    & 0.545    & 0.496    & 0.511    & 0.508 \\
+    & P.    & 0.394    & 0.386    & 0.382    & \textbf{ 0.549 }    & 0.386    & 0.342    & 0.45    & 0.387    & -    & 0.405    & 0.413    & 0.385 \\
+    & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.682    & 0.668    & \textbf{ 0.695 }    & 0.3    & 0.691    & 0.691    & -    & 0.691    & 0.659    & 0.691 \\
+    & F\textsubscript{1}    & 0.503    & 0.497    & 0.489    & \textbf{ 0.602 }    & 0.497    & 0.32    & 0.545    & 0.496    & -    & 0.511    & 0.508    & 0.494 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\GANNT}}
-    & P.    & 0.552    & 0.544    & 0.544    & 0.578    & 0.544    & \textbf{ 0.617 }    & 0.544    & 0.541 \\
-    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.485 \\
-    & F\textsubscript{1}    & 0.548    & 0.544    & 0.544    & 0.561    & 0.544    & \textbf{ 0.578 }    & 0.544    & 0.512 \\
+    & P.    & 0.552    & 0.544    & 0.561    & 0.544    & 0.578    & 0.544    & 0.544    & \textbf{ 0.617 }    & 0.544    & 0.544    & 0.541    & 0.544 \\
+    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.485    & \textbf{ 0.544 } \\
+    & F\textsubscript{1}    & 0.548    & 0.544    & 0.552    & 0.544    & 0.561    & 0.544    & 0.544    & \textbf{ 0.578 }    & 0.544    & 0.544    & 0.512    & 0.544 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\ModisDataset}}
-    & P.    & 0.212    & 0.212    & 0.391    & 0.289    & \textbf{ 0.667 }    & 0.346    & 0.5    & 0.234 \\
-    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 }    & 0.146    & 0.22    & \textbf{ 0.268 }    & \textbf{ 0.268 } \\
-    & F\textsubscript{1}    & 0.237    & 0.237    & 0.281    & 0.278    & 0.24    & 0.269    & \textbf{ 0.349 }    & 0.25 \\
+    & P.    & 0.212    & 0.212    & 0.224    & 0.391    & 0.289    & 0.312    & \textbf{ 0.667 }    & 0.346    & 0.455    & 0.5    & 0.234    & 0.244 \\
+    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 }    & 0.244    & 0.146    & 0.22    & 0.122    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.244 \\
+    & F\textsubscript{1}    & 0.237    & 0.237    & 0.244    & 0.281    & 0.278    & 0.274    & 0.24    & 0.269    & 0.192    & \textbf{ 0.349 }    & 0.25    & 0.244 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\WARC}}
-    & P.    & 0.394    & 0.38    & 0.388    & 0.382    & 0.397    & 0.397    & 0.399    & \textbf{ 0.462 } \\
-    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.691    & \textbf{ 0.699 }    & 0.691    & \textbf{ 0.699 }    & 0.676 \\
-    & F\textsubscript{1}    & 0.504    & 0.492    & 0.499    & 0.492    & 0.507    & 0.504    & 0.508    & \textbf{ 0.549 } \\
+    & P.    & 0.394    & 0.38    & 0.377    & 0.388    & 0.382    & 0.379    & 0.397    & 0.397    & 0.383    & 0.399    & \textbf{ 0.462 }    & 0.378 \\
+    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.684    & \textbf{ 0.699 }    & 0.691    & 0.691    & \textbf{ 0.699 }    & 0.691    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.676    & 0.669 \\
+    & F\textsubscript{1}    & 0.504    & 0.492    & 0.486    & 0.499    & 0.492    & 0.49    & 0.507    & 0.504    & 0.495    & 0.508    & \textbf{ 0.549 }    & 0.483 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\Avg}}
-    & P.    & 0.38    & 0.373    & 0.456    & 0.403    & \textbf{ 0.49 }    & 0.422    & 0.439    & 0.43 \\
-    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.555    & 0.555    & 0.532    & 0.483    & 0.569    & 0.466 \\
-    & F\textsubscript{1}    & 0.449    & 0.443    & \textbf{ 0.485 }    & 0.458    & 0.461    & 0.431    & 0.473    & 0.429 \\
+    & P.    & 0.38    & 0.373    & 0.375    & 0.456    & 0.403    & 0.381    & \textbf{ 0.49 }    & 0.422    & 0.428    & 0.439    & 0.43    & 0.377 \\
+    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.564    & 0.555    & 0.555    & 0.485    & 0.532    & 0.483    & 0.502    & 0.569    & 0.466    & 0.558 \\
+    & F\textsubscript{1}    & 0.449    & 0.443    & 0.441    & \textbf{ 0.485 }    & 0.458    & 0.413    & 0.461    & 0.431    & 0.417    & 0.473    & 0.429    & 0.441 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\WeightedAvg}}
-    & P.    & 0.396    & 0.388    & \textbf{ 0.48 }    & 0.402    & 0.461    & 0.415    & 0.425    & 0.436 \\
-    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.622    & 0.629    & 0.62    & 0.596    & 0.635    & 0.572 \\
-    & F\textsubscript{1}    & 0.483    & 0.477    & \textbf{ 0.532 }    & 0.483    & 0.503    & 0.474    & 0.496    & 0.483 \\
+    & P.    & 0.396    & 0.388    & 0.387    & \textbf{ 0.48 }    & 0.402    & 0.375    & 0.461    & 0.415    & 0.423    & 0.425    & 0.436    & 0.388 \\
+    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.627    & 0.622    & 0.629    & 0.463    & 0.62    & 0.596    & 0.573    & 0.635    & 0.572    & 0.625 \\
+    & F\textsubscript{1}    & 0.483    & 0.477    & 0.472    & \textbf{ 0.532 }    & 0.483    & 0.402    & 0.503    & 0.474    & 0.454    & 0.496    & 0.483    & 0.473 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
 \end{tabularx}
